syntax = "proto3";

package greet;
import "google/api/annotations";

option go_package = "./greetpb";

message Greeting{
    string first_name = 1;
    string second_name = 2;
}

message GreetRequest{
    Greeting greeting = 1;
}

message GreetResponse{
    string result = 1;
}

message GreetManyRequest{
    Greeting greeting = 1;
}

message GreetManyResponse{
    string result = 1;
}

message LongGreetRequest{
    Greeting greeting = 1;
}

message LongGreetResponse{
    string result = 1;
}

message GreetWithDeadlineRequest{
    Greeting greeting =1;
}

message GreetWithDeadlineResponse{
    string result =1;
}

service GreetService{
    rpc Greet(GreetRequest) returns (GreetResponse){
        option (google.api.http) = {
            post: "/v1/example/echo"
            body: "*"
          };
    }

    rpc GreetMany(GreetManyRequest) returns (stream GreetManyResponse);

    rpc LongGreet(stream LongGreetRequest) returns ( LongGreetResponse );

    rpc GreetWithDeadline (GreetWithDeadlineRequest) returns (GreetWithDeadlineResponse){};
}